--- a/ansible/playbooks/ansible.cfg
+++ b/ansible/playbooks/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./hosts.ini
-remote_user = ubuntu
+remote_user = root
 host_key_checking = False
 retry_files_enabled = False
 remote_port = 22
