docs(wip): first attempt at readme
Signed-off-by: segunjkf <sege.timz12@gmail.com>

--- a/ansible/playbooks/hosts.ini
+++ b/ansible/playbooks/hosts.ini
@@ -1,5 +1,5 @@
 [horcrux]
-horcrux-node ansible_host=54.91.158.224
+horcrux-node ansible_host=188.245.116.212 ansible_password=''
 
 [noble]
-noble-node ansible_host=54.159.251.58 
+noble-node ansible_host=188.34.180.243 ansible_password=''
