--- a/ansible/playbooks/run-noble.yml
+++ b/ansible/playbooks/run-noble.yml
@@ -7,5 +7,6 @@
     priv_validator_key_src: /Users/user/Desktop/tech/tech-interview/ZKV/ansible/validator_key/priv_validator_key.json
     horcrux_node_address: "{{ hostvars['horcrux-node'].ansible_host }}"
     seeds: "ade4d8bc8cbe014af6ebdf3cb7b1e9ad36f412c0@testnet-seeds.polkachu.com:21556"
+    noble_fresh_sync: true
   roles:
     - "../roles/noble"
